Fix sidebar z-index

--- a/application/modules/dashboard/assets/css/dashboard.css
+++ b/application/modules/dashboard/assets/css/dashboard.css
@@ -270,7 +270,9 @@
 	transition: width 0.3s ease-out;
 	background-color: #ffffff;
 	box-shadow: #98c2d4 1px 0px 20px;
+	z-index: 2;
 }
+
 
 .an-sidebar-logo {
 	margin: 0 0px 20px 15px;
